@@ -1,3 +1,7 @@
+2007-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* haskell-c.el: New file.
+
 2007-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (inferior-haskell-load-file): Do reload if prefix arg.
